1st revision with Mark

--- a/public/less/admin.less
+++ b/public/less/admin.less
@@ -47,7 +47,7 @@
 }
 
 
-.t-cell{
+.t-cell {
   word-wrap: break-word;
   min-width: 125px;
   display: table-cell;
@@ -115,5 +115,11 @@
   max-width:1000px;
   // border: 1px solid black;
   word-break: normal;
+}
+
+.ind-option{
+  border-bottom: 1px solid black;
+  font-size: 1.3rem;
+  font-weight: 500;
 }
 
