--- a/public/views/location-form.html
+++ b/public/views/location-form.html
@@ -1,6 +1,7 @@
 <section class="form-page container">
   <h4>Select a location</h4>
   <select id="location-selection" class="form-control" ng-change=" getLocationData()" ng-model="selection1" placeholder="-- Select an option --">
+    <option value="" disabled selected>Select your option</option>
     <option ng-repeat="loc in townNames track by $index" value="{{ loc }}"> {{ loc }} </option>
   </select>
 
@@ -60,7 +61,7 @@
       <div class="form-inline">
         <div class="form-group">
           <label for="state">State</label>
-          <select class="form-control" id="customer-state" name="state" ng-model="formData.state">
+          <select class="form-control" id="customer-state" name="state" ng-model="formData.state" required>
             <option value="">enter your state</option>
             <option value="AK">Alaska</option>
             <option value="AL">Alabama</option>
@@ -118,7 +119,7 @@
         </div>
         <div class="form-group">
           <label for="zip">Zipcode</label>
-          <input type="number" class="form-control" id="customer-zip" placeholder="00000" ng-model="formData.zip">
+          <input type="number" class="form-control" id="customer-zip" placeholder="00000" ng-model="formData.zip" required>
         </div>
       </div>
       <div class="location-options">
