--- a/public/less/main.less
+++ b/public/less/main.less
@@ -27,17 +27,71 @@ body {
   height: 100%;
 }
 
+.btn {
+  -webkit-transition-duration: 0.3s;
+  -moz-transition-duration: 0.3s;
+  -o-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+
 .modal-open {
   overflow: auto;
 }
-// .navbar .nav > li > a {
-//     color: white !important;
-// }
 
 .navbar-default {
   // color: white !important;
   margin-bottom: 0 !important;
   font-family: 'Istok Web', 'Helvetica Neue', sans-serif;
-  background: rgba(255, 255, 255, 1) !important;
+  background-color: rgba(255, 255, 255, 1) !important;
   border: none;
+}
+
+.navbar-default .navbar-nav > li > a {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+@media (min-width: 990px) {
+  .navbar-default {
+    color: #ffffff !important;
+    margin-bottom: 0 !important;
+    font-family: 'Istok Web', 'Helvetica Neue', sans-serif;
+    background-color: transparent !important;
+    border: none;
+    // font-weight: bold;
+    display: table;
+    vertical-align: bottom;
+  }
+  .navbar-default .navbar-nav > li > a {
+    // line-height: 50px;
+    // display: table-cell;
+    color: #ffffff !important;
+    font-size: 14px;
+  }
+  .navbar-default .navbar-brand {
+    color: #ffffff !important;
+    font-weight: : 700;
+    margin-right: 40px;
+    // display: table-cell;
+    // font-size: 2em;
+  }
+//   .navbar-default .navbar-nav > li > a {
+//     color: #FFFFFF;
+//   }
+  .navbar-default .navbar-brand:hover {
+    color: #18BC9C !important;
+  }
+  .navbar-default .navbar-nav > li > a:hover,
+  .navbar-default .navbar-nav > li > a:focus {
+    color: #18BC9C !important;
+  }
+}
+
+.navbar-toggle {
+  margin-left: 5px;
+  border: none;
+}
+
+.collapse .collapsed {
+  background-color: transparent !important;
 }
