--- a/public/views/home.html
+++ b/public/views/home.html
@@ -2,19 +2,18 @@
 
 
 <div class="jumbotron text-center">
+    <video autoplay loop muted poster="screenshot.jpg" id="background">
+      <source src="../img/MVI_0358.mp4" type="video/mp4">
+    </video>
 
-  <video autoplay loop muted poster="screenshot.jpg" id="background">
-    <source src="http://techslides.com/demos/sample-videos/small.mp4" type="video/mp4">
-  </video>
-
-  <div class="container va-container">
-    <div class="va-middle">
-      <h1 class="jumbo-header">Get Connected</h1>
-      <h4 class="jumbo-sub-header">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-      <a href="#/locations" title="" class="btn btn-jumbo btn-lg btn-home-mobile hidden-md hidden-lg">Take Action</a>
-      <a href="#/locations" title="" class="btn btn-jumbo btn-lg btn-home-desktop hidden-sm hidden-xs">Take Action</a>
+    <div class="container va-container">
+      <div class="va-middle">
+        <h1 class="jumbo-header">Get Connected</h1>
+        <h4 class="jumbo-sub-header">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
+        <a href="#/locations" title="" class="btn btn-jumbo btn-lg btn-home-mobile hidden-md hidden-lg">Take Action</a>
+        <a href="#/locations" title="" class="btn btn-jumbo btn-lg btn-home-desktop hidden-sm hidden-xs">Take Action</a>
+      </div>
     </div>
-  </div>
 </div>
 
 <!-- Home page modules -->
@@ -36,7 +35,7 @@
 <div class="container module-container va-container">
   <div class="row">
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 module module-img">
-      <img class="img-responsive" src="http://imperativemale.com/wp-content/uploads/2016/02/how-to-hack-wifi-password.png">
+      <img class="img-responsive" src="../img/module-img-02.jpg">
     </div>
 
     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 module module-text va-middle">
