--- a/public/views/index.html
+++ b/public/views/index.html
@@ -54,20 +54,20 @@
 
     </nav> -->
   <!-- testing nav collapse -->
-    <nav class="navbar navbar-default navbar-static-top offset-3 pull right">
+    <nav class="navbar navbar-default navbar-custom navbar-static-top offset-3 pull right">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <button type="button" class="navbar-toggle collapsed pull-left" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand pull left" href="#/"><strong>Ray's Wifi</strong></a>
+          <a class="navbar-brand pull-left" href="#/"><strong>Ray's Wifi</strong></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a data-toggle="collapse" data-target=".navbar-collapse"  href="#/admin">Admin</a>
+            <li><a data-toggle="collapse" data-target=".navbar-collapse" href="#/admin">Admin</a>
             </li>
             <li><a data-toggle="collapse" data-target=".navbar-collapse" href="#/locations">Locations</a>
             </li>
