--- a/public/less/index.less
+++ b/public/less/index.less
@@ -1,4 +1,5 @@
 
+
 video#background {
   position: absolute;
   top: 0;
@@ -6,58 +7,45 @@ video#background {
   bottom: 0;
   left: 0;
   overflow: hidden;
-  // z-index: -100;
-  // height: auto;
   width: auto;
   min-width: 100%;
   min-height: 100%;
-  // width: 100%;
-  height: 500px;
+  height: 600px;
   -webkit-transform: scaleX(2);
   -moz-transform: scaleX(2);
-  // background: url('http://res.cloudinary.com/www-virgin-com/virgin-com-prod/sites/virgin.com/files/Articles/Entrepreneur%20Getty/Coffee_shop_laptop_getty_0.jpg') no-repeat;
   background-size: cover;
-  // background-color: black;
-  // opacity: .8;
 }
 
 video {
   z-index: -100;
 }
 
-@media (max-width: 990px) {
-    .jumbotron {
-      background:
-        url('../img/test-bg.png');
-      background-size:cover;
-      // opacity: .8;
-    }
-    video#background {
-      display: none;
-    }
-}
-
 .jumbotron {
-  // background-image:url('http://res.cloudinary.com/www-virgin-com/virgin-com-prod/sites/virgin.com/files/Articles/Entrepreneur%20Getty/Coffee_shop_laptop_getty_0.jpg');
-  // background-size:cover;
   height:600px;
   background-color: black;
-  // opacity: .8;
   border-radius: 0 !important;
-  position: absolute;
   top: -50px;
-  // margin-top: 0;
   color: #fff !important;
-  // padding-top: 250px !important;
   font-family: 'Istok Web', 'Helvetica Neue', sans-serif;
   position: relative;
   z-index: 101;
   margin-bottom: -50px;
 }
 
+@media (max-width: 768px) {
+    .jumbotron {
+      background:
+        url('../img/test-bg.png');
+      background-size:cover;
+    }
+    video#background {
+      display: none;
+    }
+}
+
+// jumbotron content overlay
 .jumbo-header {
-  // font-size: 44px;
-  font-weight: 800;
+  font-weight: 700;
   text-transform: uppercase;
 }
 
@@ -79,73 +67,49 @@ video {
   display: table-cell;
 }
 
+// Custom home page button styling
+
+.btn-home {
+  color: #fff !important;
+}
+
 .btn-home-mobile, .btn-home-mobile:link, .btn-home-mobile:visited {
   width: 100%;
-  border-radius: 2px !important;
-  color: #fff !important;
-  font-weight: bold;
-  // text-shadow: 0 1px 0 black;
-  background-color: rgba(52, 152, 219,1.0) !important;
-  border-color: rgba(52, 152, 219,1.0) !important;
-  border-bottom-color: rgba(41, 128, 185,1.0);
-  z-index: 100000;
+  background-color: #1abc9c !important;
+  border-color: #1abc9c !important;
+  border-bottom-color: #16a085;
 }
 
 .btn-home-mobile:active, .btn-home-mobile:hover {
-  background-color: rgba(41, 128, 185,1.0) !important;
-  color: #fff !important;
-  border-color: rgba(41, 128, 185,1.0) !important;
-  border-bottom-color: rgba(41, 128, 185,1.0);
-  font-weight: bold;
-  z-index: 100000;
+  background-color: #16a085 !important;
+  border-color: #16a085 !important;
+  border-bottom-color: #16a085;
 }
 
 .btn-home-desktop, .btn-home-desktop:link, .btn-home-desktop:visited {
-  z-index: 100000;
-  border-radius: 2px !important;
-  color: #fff !important;
-  font-weight: bold;
-  // text-shadow: 0 1px 0 black;
   background-color: rgba(255, 255, 255, .5) !important;
-  // border-color: rgba(255, 255, 255, .5) !important;
   padding: 9px 27px;
-  // border-bottom-color: rgba(255, 255, 255,1);
 }
 
 .btn-home-desktop:active, .btn-home-desktop:hover {
-  z-index: 100000;
-  color: #fff !important;
   background-color: rgba(0,0,0,0.35) !important;
-  // border-color: rgba(0,0,0,0.35) !important;
-  // border-bottom-color: rgba(41, 128, 185,1.0);
-  font-weight: bold;
 }
+
+// Home page content module styling
 
 .module-container {
   background-color: #fff;
   max-width: 695px;
   margin: 40px auto;
-  // margin-bottom: 30px;
-}
-
-.module-img {
-  padding-left: 0 !important;
-  padding-right: 0 !important;;
-}
-
-.module-text {
-  // padding: 15px;
-  // font-weight: bold;
-  vertical-align: middle !important;
-  // font-size: 20px;
-  padding: 30px 15px 30px 15px !important;
-  h4 {
-    // text-transform: uppercase !important;
-    font-weight: bold;
+  .module-img {
+    padding-left: 0 !important;
+    padding-right: 0 !important;;
+  }
+  .module-text {
+    vertical-align: middle !important;
+    padding: 25px 15px 25px 15px !important;
+    h4 {
+      font-weight: bold;
+    }
   }
 }
-
-// .navbar {
-//   margin-bottom: 0;
-//   border-radius: 0;
-// }
