--- a/public/less/main.less
+++ b/public/less/main.less
@@ -1,13 +1,74 @@
-// @border-color: #000000;
-// @main-border-color: orange;
-// @main-button-color: green;
 @border-radius: 5px;
-
 
 @import "../libs/bootstrap/less/bootstrap.less";
 @import "form.less";
 @import "admin.less";
 @import "index.less";
+
+/* Start fade-in animation tools */
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.fade-in {
+  opacity: 0;
+  /* make things invisible upon start */
+  -webkit-animation: fadeIn ease-in 1;
+  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+  -moz-animation: fadeIn ease-in 1;
+  animation: fadeIn ease-in 1;
+  -webkit-animation-fill-mode: forwards;
+  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+  -moz-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-duration: .2s;
+  -moz-animation-duration: .2s;
+  animation-duration: .2s;
+}
+
+.fade-in.one {
+  -webkit-animation-delay: 0.0s;
+  -moz-animation-delay: 0.0s;
+  animation-delay: 0.0s;
+}
+
+.fade-in.two {
+  -webkit-animation-delay: .2s;
+  -moz-animation-delay: .2s;
+  animation-delay: .2s;
+}
+
+.fade-in.three {
+  -webkit-animation-delay: .7s;
+  -moz-animation-delay: .7s;
+  animation-delay: .7s;
+}
+
+// End fade-in animation tools
 
 html {
   font-size: 10px;
@@ -17,14 +78,19 @@ html {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-color: #ecf0f1;
-    font-family: 'Istok Web', 'Helvetica Neue', sans-serif;
+    font-family: 'Lato', 'Istok Web', 'Helvetica Neue', sans-serif;
     color: rgb(86, 90, 92);
+    overflow: auto;
+    height: 100%;
   }
 }
 
-body {
+section.container {
+  margin-top: 20px;
+}
+
+.modal-open {
   overflow: auto;
-  height: 100%;
 }
 
 .btn {
@@ -32,59 +98,32 @@ body {
   -moz-transition-duration: 0.3s;
   -o-transition-duration: 0.3s;
   transition-duration: 0.3s;
-}
-
-.modal-open {
-  overflow: auto;
-}
-
-.navbar-default {
-  // color: white !important;
-  margin-bottom: 0 !important;
-  font-family: 'Istok Web', 'Helvetica Neue', sans-serif;
-  background-color: rgba(255, 255, 255, 1) !important;
-  border: none;
-}
-
-.navbar-default .navbar-nav > li > a {
-  font-size: 18px;
+  border-radius: 2px !important;
   font-weight: bold;
 }
 
-@media (min-width: 990px) {
-  .navbar-default {
-    color: #ffffff !important;
-    margin-bottom: 0 !important;
-    font-family: 'Istok Web', 'Helvetica Neue', sans-serif;
-    background-color: transparent !important;
-    border: none;
-    // font-weight: bold;
-    display: table;
-    vertical-align: bottom;
-  }
-  .navbar-default .navbar-nav > li > a {
-    // line-height: 50px;
-    // display: table-cell;
-    color: #ffffff !important;
-    font-size: 14px;
-  }
-  .navbar-default .navbar-brand {
-    color: #ffffff !important;
-    font-weight: : 700;
-    margin-right: 40px;
-    // display: table-cell;
-    // font-size: 2em;
-  }
-//   .navbar-default .navbar-nav > li > a {
-//     color: #FFFFFF;
-//   }
-  .navbar-default .navbar-brand:hover {
-    color: #18BC9C !important;
-  }
-  .navbar-default .navbar-nav > li > a:hover,
-  .navbar-default .navbar-nav > li > a:focus {
-    color: #18BC9C !important;
-  }
+.navbar-default {
+  // margin-bottom: 40px !important;
+  background-color: rgba(255, 255, 255, 1) !important;
+  border: none;
+  width: 100%;
+}
+
+.navbar-default .navbar-nav > li > a {
+  font-size: 16px;
+  padding: 10px;
+}
+
+.navbar-default .navbar-brand {
+  text-align: center;
+}
+
+.navbar-home .navbar-brand:hover {
+  color: #18BC9C !important;
+}
+.navbar-home .navbar-nav > li > a:hover,
+.navbar-home .navbar-nav > li > a:focus {
+  color: #18BC9C !important;
 }
 
 .navbar-toggle {
@@ -92,6 +131,37 @@ body {
   border: none;
 }
 
-.collapse .collapsed {
-  background-color: transparent !important;
+@media (min-width: 768px) {
+  // Global nav settings for screen bigger than tablet
+  .navbar div.container {
+    margin-left: 15px;
+    margin-right: 0;
+  }
+  .navbar {
+    margin-bottom: 0 !important;
+    border: none;
+    display: table;
+    border: none;
+    margin-bottom: 0 !important;
+  }
+  .navbar-home .navbar-nav > li > a {
+    font-size: 14px;
+    padding: 23px 30px 10px 0px;
+  }
+  .navbar-home .navbar-brand {
+    font-weight: : 700;
+    margin-right: 50px;
+    font-size: 20px;
+    padding-top: 20px;
+  }
+  // Custom nav transparency settings only for home page
+  .navbar-home {
+    background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .0)),  !important;
+  }
+  .navbar-home .navbar-nav > li > a {
+    color: #ffffff !important;
+  }
+  .navbar-home .navbar-brand {
+    color: #ffffff !important;
+  }
 }
