--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,17 +1,14 @@
-
-
-
-<div class="jumbotron text-center">
+<div class="jumbotron text-center fade-in two">
     <video autoplay loop muted poster="screenshot.jpg" id="background">
       <source src="../img/MVI_0358.mp4" type="video/mp4">
     </video>
 
-    <div class="container va-container">
+    <div class="container va-container fade-in three">
       <div class="va-middle">
         <h1 class="jumbo-header">Get Connected</h1>
         <h4 class="jumbo-sub-header">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-        <a href="#/locations" title="" class="btn btn-jumbo btn-lg btn-home-mobile hidden-md hidden-lg">Take Action</a>
-        <a href="#/locations" title="" class="btn btn-jumbo btn-lg btn-home-desktop hidden-sm hidden-xs">Take Action</a>
+        <a href="#/locations" title="" class="btn btn-jumbo btn-lg btn-home btn-home-mobile hidden-sm hidden-md hidden-lg">Take Action</a>
+        <a href="#/locations" title="" class="btn btn-jumbo btn-lg btn-home btn-home-desktop hidden-xs">Take Action</a>
       </div>
     </div>
 </div>
@@ -21,7 +18,7 @@
 <div class="container module-container va-container">
   <div class="row">
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 module module-img">
-      <img class="img-responsive" src="../img/module-img-01.jpg">
+      <img class="img-responsive" src="../img/module-img-02.jpg">
     </div>
 
     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 module module-text va-middle">
@@ -35,7 +32,7 @@
 <div class="container module-container va-container">
   <div class="row">
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 module module-img">
-      <img class="img-responsive" src="../img/module-img-02.jpg">
+      <img class="img-responsive" src="../img/module-img-01.jpg">
     </div>
 
     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 module module-text va-middle">
@@ -45,14 +42,3 @@
     </div>
   </div>
 </div>
-<!--
-<video autoplay loop muted poster="screenshot.jpg" id="background">
-    <source src="http://techslides.com/demos/sample-videos/small.mp4" type="video/mp4">
-</video>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h1>www.viewlike.us</h1>
-            </div>
-        </div>
-    </div> -->
