--- a/public/views/index.html
+++ b/public/views/index.html
@@ -12,10 +12,8 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css"> <!-- custom styles
     -->
-    <link href='https://fonts.googleapis.com/css?family=Istok+Web' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
     <!-- custom styles -->
-
 
     <!-- JS -->
     <script src="libs/jquery/dist/jquery.min.js"></script>
@@ -39,45 +37,30 @@
     <script src="js/app.js"></script>
 </head>
 <body ng-app="sampleApp" >
-  <!-- <div class="container"> -->
-    <!-- HEADER -->
-    <!-- <nav class="container-fluid navbar navbar-inverse">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#/">Raylife Wifi</a>
-        </div> -->
-
-        <!-- LINK TO OUR PAGES. ANGULAR HANDLES THE ROUTING HERE -->
-        <!-- <ul class="nav navbar-nav">
-            <li><a href="#/admin">Admin</a></li>
-            <li><a href="#/locations">Locations</a></li>
-        </ul>
-
-    </nav> -->
-  <!-- testing nav collapse -->
-    <nav class="navbar navbar-default navbar-custom navbar-static-top offset-3 pull right">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed pull-left" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand pull-left" href="#/"><strong>Ray's Wifi</strong></a>
+  <nav class="navbar navbar-default navbar-home navbar-static-top offset-3 pull right">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed pull-left" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand pull-left" href="#/"><strong>Ray's Wifi</strong></a>
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li><a data-toggle="collapse" data-target=".navbar-collapse" href="#/admin">Admin</a>
+              </li>
+              <li><a data-toggle="collapse" data-target=".navbar-collapse" href="#/locations">Locations</a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a data-toggle="collapse" data-target=".navbar-collapse" href="#/admin">Admin</a>
-            </li>
-            <li><a data-toggle="collapse" data-target=".navbar-collapse" href="#/locations">Locations</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+      </nav>
 
     <!-- ANGULAR DYNAMIC CONTENT   -->
-    <div ng-view></div>
+    <div ng-view class="fade-in one"></div>
   <!-- </div> -->
   <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
