--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,16 +1,19 @@
-<div class="jumbotron text-center fade-in two">
-    <video autoplay loop muted poster="screenshot.jpg" id="background">
-      <source src="../img/MVI_0358.mp4" type="video/mp4">
-    </video>
+<div class="jumbotron text-center fade-in one">
+  <video autoplay loop muted poster="../img/test-bg.png" id="background">
+    <!-- Different source file types here -->
+    <source src="../img/MVI_0358.mp4" type="video/mp4">
+    <source src="" type="video/ogv">
+    <source src="" type="video/webm">
+  </video>
 
-    <div class="container va-container fade-in three">
-      <div class="va-middle">
-        <h1 class="jumbo-header">Get Connected</h1>
-        <h4 class="jumbo-sub-header">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-        <a href="#/locations" title="" class="btn btn-jumbo btn-lg btn-home btn-home-mobile hidden-sm hidden-md hidden-lg">Take Action</a>
-        <a href="#/locations" title="" class="btn btn-jumbo btn-lg btn-home btn-home-desktop hidden-xs">Take Action</a>
-      </div>
+  <div class="container va-container fade-in three">
+    <div class="va-middle">
+      <h1 class="jumbo-header">Get Connected</h1>
+      <h4 class="jumbo-sub-header">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
+      <a href="#/locations" title="" class="btn btn-jumbo btn-lg btn-home btn-home-mobile hidden-sm hidden-md hidden-lg">Take Action</a>
+      <a href="#/locations" title="" class="btn btn-jumbo btn-lg btn-home btn-home-desktop hidden-xs">Take Action</a>
     </div>
+  </div>
 </div>
 
 <!-- Home page modules -->
@@ -20,7 +23,6 @@
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 module module-img">
       <img class="img-responsive" src="../img/module-img-02.jpg">
     </div>
-
     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 module module-text va-middle">
       <h4>Module one headline</h4>
       <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem.</p>
@@ -28,13 +30,11 @@
     </div>
   </div>
 </div>
-
 <div class="container module-container va-container">
   <div class="row">
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 module module-img">
       <img class="img-responsive" src="../img/module-img-01.jpg">
     </div>
-
     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 module module-text va-middle">
       <h4>Module two headline</h4>
       <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem.</p>
