--- a/public/less/index.less
+++ b/public/less/index.less
@@ -1,5 +1,3 @@
-
-
 video#background {
   position: absolute;
   top: 0;
@@ -18,6 +16,7 @@ video#background {
 
 video {
   z-index: -100;
+  opacity: .8;
 }
 
 .jumbotron {
@@ -26,17 +25,20 @@ video {
   border-radius: 0 !important;
   top: -50px;
   color: #fff !important;
-  font-family: 'Istok Web', 'Helvetica Neue', sans-serif;
   position: relative;
   z-index: 101;
   margin-bottom: -50px;
 }
 
+// Switches from video to screenshot
 @media (max-width: 768px) {
     .jumbotron {
       background:
+        linear-gradient(
+        rgba(0, 0, 0, 0.2),
+        rgba(0, 0, 0, 0.2)),
         url('../img/test-bg.png');
-      background-size:cover;
+      background-size: cover;
     }
     video#background {
       display: none;
@@ -68,7 +70,6 @@ video {
 }
 
 // Custom home page button styling
-
 .btn-home {
   color: #fff !important;
 }
@@ -96,7 +97,6 @@ video {
 }
 
 // Home page content module styling
-
 .module-container {
   background-color: #fff;
   max-width: 695px;
