--- a/public/views/index.html
+++ b/public/views/index.html
@@ -10,8 +10,8 @@
     <title>Wifi Demand Finder</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/main.css"> <!-- custom styles
-    -->
+    <link rel="stylesheet" href="css/main.css">
+    <!-- custom styles -->
     <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
     <!-- custom styles -->
 
@@ -38,29 +38,29 @@
 </head>
 <body ng-app="sampleApp" >
   <nav class="navbar navbar-default navbar-home navbar-static-top offset-3 pull right">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed pull-left" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand pull-left" href="#/"><strong>Ray's Wifi</strong></a>
-          </div>
-          <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li><a data-toggle="collapse" data-target=".navbar-collapse" href="#/admin">Admin</a>
-              </li>
-              <li><a data-toggle="collapse" data-target=".navbar-collapse" href="#/locations">Locations</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed pull-left" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar top-bar"></span>
+          <span class="icon-bar middle-bar"></span>
+          <span class="icon-bar bottom-bar"></span>
+        </button>
+        <a class="navbar-brand pull-left" href="#/"><strong>Ray's Wifi</strong></a>
+      </div>
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li><a data-toggle="collapse" data-target=".navbar-collapse" href="#/admin">Admin</a>
+          </li>
+          <li><a data-toggle="collapse" data-target=".navbar-collapse" href="#/locations">Locations</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-    <!-- ANGULAR DYNAMIC CONTENT   -->
-    <div ng-view class="fade-in one"></div>
+  <!-- ANGULAR DYNAMIC CONTENT   -->
+  <div ng-view class="fade-in one"></div>
   <!-- </div> -->
   <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
