--- a/public/views/index.html
+++ b/public/views/index.html
@@ -36,7 +36,7 @@
     <script src="js/appRoutes.js"></script>
     <script src="js/app.js"></script>
 </head>
-<body ng-app="sampleApp" >
+<body ng-app="sampleApp" class="fade-in one">
   <nav class="navbar navbar-default navbar-home navbar-static-top offset-3 pull right">
     <div class="container">
       <div class="navbar-header">
@@ -60,7 +60,7 @@
   </nav>
 
   <!-- ANGULAR DYNAMIC CONTENT   -->
-  <div ng-view class="fade-in one"></div>
+  <div ng-view></div>
   <!-- </div> -->
   <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
