--- a/public/less/index.less
+++ b/public/less/index.less
@@ -33,11 +33,7 @@ video {
 // Switches from video to screenshot
 @media (max-width: 768px) {
     .jumbotron {
-      background:
-        linear-gradient(
-        rgba(0, 0, 0, 0.25),
-        rgba(0, 0, 0, 0.25),
-        url('../img/test-bg.png');
+      background: url('../img/test-bg.png') linear-gradient(rgba(0, 0, 0, 0.25),rgba(0, 0, 0, 0.25));
       background-size: cover;
     }
     video#background {
