--- a/public/views/home.html
+++ b/public/views/home.html
@@ -25,8 +25,8 @@
       <img class="img-responsive" src="../img/module-img-02.jpg">
     </div>
     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 module module-text va-middle">
-      <h4>Module one headline</h4>
-      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem.</p>
+      <h4>Vision</h4>
+      <p>Connect rural America to high speed broadband internet</p>
       </div>
     </div>
   </div>
@@ -37,8 +37,8 @@
       <img class="img-responsive" src="../img/module-img-01.jpg">
     </div>
     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 module module-text va-middle">
-      <h4>Module two headline</h4>
-      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem.</p>
+      <h4>Mission</h4>
+      <p>Identify underserved areas of internet broadband connectivity, assess market demand/appetite, and demonstrate viability for network investment by carriers to build systems</p>
       </div>
     </div>
   </div>
