--- a/public/views/index.html
+++ b/public/views/index.html
@@ -77,7 +77,7 @@
         <ul class="nav navbar-nav">
           <li><a data-toggle="collapse" data-target=".navbar-collapse" href="#/locations">Locations</a>
           </li>
-          <li><a data-toggle="collapse" data-target=".navbar-collapse"  href="#/admin" ng-show="authed" ng-cloak>Admin</a>
+          <li><a data-toggle="collapse" data-target=".navbar-collapse"  href="#/admin" ng-show="ifAuthed" ng-cloak>Admin</a>
           </li>
         </ul>
       </div>
