--- a/public/views/index.html
+++ b/public/views/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta property="og:image" content="../img/wifi-symbol.jpg">
+    <meta property="og:type" content="Form"
+    <meta property="og:title" content="Finally Cooperative Wifi">
+    <meta property="og:description" content="We finally have another wifi option.  Collectively we can support a better more cost effective internet broadband option for our community.  But it won't happend without you, join us!">
     <!-- <meta name="viewport" content="initial-scale = 1 "> -->
 
     <title>Wifi Demand Finder</title>
