share buttons formulated

--- a/public/less/form.less
+++ b/public/less/form.less
@@ -29,3 +29,31 @@
     margin-top: 12rem;
   }
 }
+
+.share {
+  text-align:center;
+  vertical-align: middle;
+  #share-text {
+    display: block;
+    vertical-align: middle;
+    text-align: center;
+    margin: auto;
+    padding: auto;
+  }
+
+  #share-buttons {
+    vertical-align: middle;
+    text-align: center;
+    margin: auto;
+
+    img {
+      text-align: center;
+      vertical-align: middle;
+      width: 7.5rem;
+      padding: 5px;
+      border: 0;
+      box-shadow: 0;
+      display: inline;
+    }
+  }
+}
