--- a/public/views/home.html
+++ b/public/views/home.html
@@ -26,7 +26,8 @@
     </div>
     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 module module-text va-middle">
       <h4>Vision</h4>
-      <p>Connect rural America to high speed broadband internet</p>
+      <p>To provide a better more cost efficient internet to communities in need</p>
+      <!-- <p>Connect rural America to high speed broadband internet</p> -->
       </div>
     </div>
   </div>
@@ -38,7 +39,7 @@
     </div>
     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 module module-text va-middle">
       <h4>Mission</h4>
-      <p>Identify underserved areas of internet broadband connectivity, assess market demand/appetite, and demonstrate viability for network investment by carriers to build systems</p>
+      <p>Identify underserved areas of internet broadband connectivity, assess market demand, and demonstrate viability for network investment by carriers to build systems</p>
       </div>
     </div>
   </div>
