--- a/public/views/index.html
+++ b/public/views/index.html
@@ -93,6 +93,6 @@
   <div ng-view class="fade-in one"></div>
 
 </body>
-  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+  <!-- // <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script> -->
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </html>
