--- a/public/views/customer-form.html
+++ b/public/views/customer-form.html
@@ -136,10 +136,10 @@
   </section>
   <section class="container share" ng-show="showSuccess">
     <h2>Thank you for submittal.  Check your email inbox.</h2>
-    <div id="share-text" class="col-xs-12 col-md-8 col-lg-7">
+    <div id="share-text">
       <h3>The speed by which we can bring better internet to your community is determined by you and your sharing this with your neighbors.</h3>
     </div>
-    <div id="share-buttons" class="col-xs-12 col-md-8 col-lg-7">
+    <div id="share-buttons">
       <!-- Email -->
       <a href="mailto:?Subject=Finally a new internet option for our community!&amp;Body=I%20saw%20this%20and%20thought%20of%20you!%20%20More%20People%20=%20More%20Power%20=%20Better%20Internet%20=%20Lower%20Cost%20 {{fullPath}}"><img class="" src="../img/email-btn.png" alt="Email"/></a>
 
