--- a/public/less/form.less
+++ b/public/less/form.less
@@ -18,7 +18,11 @@
     border-right: 2px dotted black;
   }
 }
-
+.customer-form {
+  h2 {
+    margin-top: 7rem;
+  }
+}
 .form-head {
   margin-bottom: 4rem;
 }
