--- a/public/less/main.less
+++ b/public/less/main.less
@@ -105,6 +105,7 @@ section.container {
   background-color: rgba(255, 255, 255, 1) !important;
   border: none;
   width: 100%;
+  padding-bottom: 8px;
 }
 
 .navbar-default .navbar-nav > li > a {
@@ -115,6 +116,7 @@ section.container {
 .navbar-home .navbar-brand:hover {
   color: #18BC9C !important;
 }
+
 .navbar-home .navbar-nav > li > a:hover,
 .navbar-home .navbar-nav > li > a:focus {
   color: #18BC9C !important;
@@ -200,6 +202,7 @@ section.container {
 }
 
 .progress {
+  background-color: rgb(24, 188, 156) !important;
   &.back-container{
     @media (min-width: 1240px){
       margin-left: 16%;
@@ -210,5 +213,34 @@ section.container {
 .form-bucket {
   text-align: center;
   margin: auto;
+}
+
+.navbar {
+  padding-bottom: 8px;
+  a:hover {
+    color: #18BC9C !important;
+  }
+}
+
+.btn-home-desktop:active, .btn-home-desktop:hover {
+  background-color: rgba(24, 188, 156,.7)!important;
+}
+
+div.progress {
+  background-color: #BBB !important;
+}
+.progress-bar-striped {
+  background-color: rgb(24, 188, 156);
+}
+
+.active {
+  background-color: #18BC9C !important;
+}
+
+.nav-pills > li > a {
+  color: inherit;
+  &.active {
+    background-color: #18BC9C !important;
+  }
 }
 
