--- a/public/views/index.html
+++ b/public/views/index.html
@@ -66,7 +66,8 @@
         </div>
 ======= -->
 <body ng-app="sampleApp" ng-controller="AdminController" >
-  <nav class="navbar navbar-default navbar-home navbar-static-top offset-3 pull right">
+  <!-- add navbar-home for translucent quality  -->
+  <nav class="navbar navbar-default navbar-static-top offset-3 pull right">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed pull-left" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
