--- a/public/views/templates/edit-location.html
+++ b/public/views/templates/edit-location.html
@@ -56,6 +56,6 @@
     </div>
 <!--     <pre>{{formData | json}}</pre> -->
   </div>
-  <button type="submit" id="submit-loc-btn" ng-disabled="locForm.$invalid || formData.$invalid" ng-click="addLocation()" class="form-group btn btn-default col-xs-2 add-option">Submit</button>
+  <button type="submit" id="submit-loc-btn" ng-disabled="locForm.$invalid || formData.$invalid" ng-click="updateLocation()" class="form-group btn btn-default col-xs-2 add-option">Submit</button>
   <button ng-click="formData = {}" class="form-group btn btn-default col-xs-2 clear-form">Clear Form</button>
 </section>
