--- a/public/views/admin.html
+++ b/public/views/admin.html
@@ -25,9 +25,10 @@
     <h3 class="col-xs-4 col-sm-3 col-md-2" style="margin-top:.5rem">Locations</h3>
     <ul class="nav nav-pills">
       <li ng-class="{ active: isSet(1) }" ng-click="setTab(1)"><a href="">Index</a></li>
-      <li ng-class="{ active: isSet(2) }" ng-click="setTab(2)"><a href="">Add Location</a></li>
+      <li ng-class="{ active: isSet(2) }" ng-hide="editLoc" ng-click="setTab(2)"><a href="">Add Location</a></li>
       <li ng-class="{ active: isSet(3) }" ng-click="setTab(3)" ng-hide="needShow"><a href="">Data</a></li>
       <li ng-class="{ active: isSet(4) || isSet(5) }" ng-click="setTab(4)" ng-hide="needShow"><a href="">Customers</a></li>
+      <li ng-class="{ active: isSet(6) }" ng-show="isSet(6)" ng-click="setTab(6)"><a href="">Edit Location</a></li>
     </ul>
   </div>
 </section>
@@ -40,10 +41,13 @@
       </div>
       <div class="t-row" ng-repeat="location in locations track by $index">
         <!-- name  -->
-        <div class="t-cell">{{ location.name }}</div>
+        <div class="t-cell locname">{{ location.name }}</div>
         <!-- show -->
         <div class="t-cell">
           <button id="show-location"  ng-click="showLocationStats(location)"  class="btn btn-default">Show</button>
+        </div>
+        <div class="t-cell">
+          <button id="edit-location" ng-click="setTab(6); loadLocationData(location)"  class="btn btn-default">Edit</button>
         </div>
         <!-- delete -->
         <div class="t-cell">
@@ -55,6 +59,9 @@
   </section>
   <article ng-show="isSet(2)" ng-cloak>
     <add-location></add-location>
+  </article>
+  <article ng-show="isSet(6)" ng-cloak>
+    <edit-location></edit-location>
   </article>
   <article ng-show="isSet(3)" class="container" ng-cloak>
     <h3>{{selected.name}}</h3>
