--- a/public/views/unsubscribe.html
+++ b/public/views/unsubscribe.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <h2> You have successfully been unsubscribed from COOPERATIVE WIFI</h2>
-  <h5> If this was a mistake, please re-enter your information <a href="http://afternoon-castle-45268.herokuapp.com/locations">through this link</a></h5>
+  <h5> If this was a mistake, please re-enter your information <a href="https://afternoon-castle-45268.herokuapp.com/#/locations">through this link</a></h5>
 </body>
 </html>
