prepped, clearform, changed to FINALLY BETTER INTERNET, new pics, new language

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -10,7 +10,7 @@
   <div class="container va-container fade-in three">
     <div class="va-middle">
       <h1 class="jumbo-header">Get Connected</h1>
-      <h4 class="jumbo-sub-header">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
+      <h4 class="jumbo-sub-header">Be a part of bringing better internet to your community</h4>
       <a href="#/locations" title="" class="btn btn-jumbo btn-lg btn-home btn-home-mobile hidden-sm hidden-md hidden-lg">Take Action</a>
       <a href="#/locations" title="" class="btn btn-jumbo btn-lg btn-home btn-home-desktop hidden-xs">Take Action</a>
     </div>
@@ -22,11 +22,11 @@
 <div class="container module-container va-container">
   <div class="row">
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 module module-img">
-      <img class="img-responsive" src="../img/module-img-02.jpg">
+      <img class="img-responsive" src="../img/family-room-wifi.png">
     </div>
     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 module module-text va-middle">
       <h4>Vision</h4>
-      <p>To provide a better more cost efficient internet to communities in need</p>
+      <p>To provide better internet connectivi to communities in need</p>
       <!-- <p>Connect rural America to high speed broadband internet</p> -->
       </div>
     </div>
@@ -35,11 +35,11 @@
 <div class="container module-container va-container">
   <div class="row">
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 module module-img">
-      <img class="img-responsive" src="../img/module-img-01.jpg">
+      <img class="img-responsive" src="../img/moutain-wifi-03.jpg">
     </div>
     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 module module-text va-middle">
       <h4>Mission</h4>
-      <p>Identify underserved areas of internet broadband connectivity, assess market demand, and demonstrate viability for network investment by carriers to build systems</p>
+      <p>Identify underserved areas of internet connectivity and demonstrate viability for network investment</p>
       </div>
     </div>
   </div>
