--- a/public/views/index.html
+++ b/public/views/index.html
@@ -10,7 +10,7 @@
     <meta property="og:description" content="We finally have another wifi option.  Collectively we can support a better more cost effective internet broadband option for our community.  But it won't happend without you, join us!">
     <!-- <meta name="viewport" content="initial-scale = 1 "> -->
 
-    <title>Cooperative Wifi</title>
+    <title>Finally Better Internet</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css">
@@ -76,7 +76,7 @@
           <span class="icon-bar middle-bar"></span>
           <span class="icon-bar bottom-bar"></span>
         </button>
-        <a class="navbar-brand pull-left" href="#/"><strong>Ray's Wifi</strong></a>
+        <a class="navbar-brand pull-left" href="#/"><strong>Finally Better Internet</strong></a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
