--- a/public/views/home.html
+++ b/public/views/home.html
@@ -26,7 +26,7 @@
     </div>
     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 module module-text va-middle">
       <h4>Vision</h4>
-      <p>To provide better internet connectivi to communities in need</p>
+      <p>To provide better internet connectivity to communities in need</p>
       <!-- <p>Connect rural America to high speed broadband internet</p> -->
       </div>
     </div>
