mp4 loop working, ready for Mark check before purchasing videos

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,11 +1,14 @@
 
 <div class="jumbotron text-center fade-in one">
-  <video autoplay loop muted poster="../img/test-bg.png" id="background">
-    <!-- Different source file types here -->
-    <source src="../img/MVI_0358.mp4" type="video/mp4">
-    <source src="" type="video/ogv">
-    <source src="" type="video/webm">
-  </video>
+  <div class="video-container">
+    <video autoplay loop muted poster="../img/test-bg.png" height="400" id="background">
+      <!-- Different source file types here -->
+      <source src="../img/wifidemand-clip2.mp4" type="video/mp4">
+      <source src="" type="video/ogv">
+      <source src="" type="video/webm">
+      Video not Suported
+    </video>
+  </div>
 
   <div class="container va-container fade-in three">
     <div class="va-middle">
@@ -27,7 +30,6 @@
     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 module module-text va-middle">
       <h4>Vision</h4>
       <p>To provide better internet connectivity to communities in need</p>
-      <!-- <p>Connect rural America to high speed broadband internet</p> -->
       </div>
     </div>
   </div>
