--- a/public/less/index.less
+++ b/public/less/index.less
@@ -5,12 +5,12 @@ video#background {
   bottom: 0;
   left: 0;
   overflow: hidden;
-  width: auto;
-  min-width: 100%;
-  min-height: 100%;
-  height: 600px;
-  -webkit-transform: scaleX(2);
-  -moz-transform: scaleX(2);
+  // width: auto;
+  width: 100%;
+  height: 100%;
+  // height: 600px;
+  -webkit-transform: scaleX(1.19);
+  -moz-transform: scaleX(1.19 );
   background-size: cover;
 }
 
