add finished video loop

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,11 +1,11 @@
 
 <div class="jumbotron text-center fade-in one">
   <div class="video-container">
-    <video autoplay loop muted poster="../img/test-bg.png" height="400" id="background">
+    <video autoplay loop muted poster="../img/woman-park-still.png" height="450" id="background">
       <!-- Different source file types here -->
-      <source src="../img/wifidemand-clip2.mp4" type="video/mp4">
+      <source src="../img/wifidemand-Clip1-lg.webm" type="video/webm">
+      <source src="../img/wifidemand-Clip1-lg.mp4" type="video/mp4">
       <source src="" type="video/ogv">
-      <source src="" type="video/webm">
       Video not Suported
     </video>
   </div>
