--- a/public/less/index.less
+++ b/public/less/index.less
@@ -9,17 +9,19 @@ video#background {
   width: 100%;
   height: 100%;
   // height: 600px;
-  -webkit-transform: scaleX(1.19);
-  -moz-transform: scaleX(1.19 );
+  -webkit-transform: scaleX(1.2);
+  -moz-transform: scaleX(1.2);
   background-size: cover;
 }
 
 video {
   z-index: -100;
-  opacity: .9;
+  opacity: 1;
 }
 
 .jumbotron {
+  // background: url('../img/woman-park-still.png') linear-gradient(rgba(0, 0, 0, 0.25),rgba(0, 0, 0, 0.25)) -100px 0;
+  // background-size: cover;
   height:600px;
   background-color: black;
   border-radius: 0 !important;
@@ -31,9 +33,29 @@ video {
 }
 
 // Switches from video to screenshot
-@media (max-width: 768px) {
+@media (max-width: 400px) {
     .jumbotron {
-      background: url('../img/test-bg.png') linear-gradient(rgba(0, 0, 0, 0.25),rgba(0, 0, 0, 0.25));
+      background: url('../img/woman-park-still.png') linear-gradient(rgba(0, 0, 0, 0.25),rgba(0, 0, 0, 0.25)) -200px 0;
+      background-size: cover;
+    }
+    video#background {
+      display: none;
+    }
+}
+
+@media (min-width: 401px) and (max-width: 550px) {
+    .jumbotron {
+      background: url('../img/woman-park-still.png') linear-gradient(rgba(0, 0, 0, 0.25),rgba(0, 0, 0, 0.25)) -100px 0;
+      background-size: cover;
+    }
+    video#background {
+      display: none;
+    }
+}
+
+@media (min-width: 551px) and (max-width: 768px) {
+    .jumbotron {
+      background: url('../img/woman-park-still.png') linear-gradient(rgba(0, 0, 0, 0.25),rgba(0, 0, 0, 0.25)) 0 0;
       background-size: cover;
     }
     video#background {
@@ -105,7 +127,11 @@ video {
     vertical-align: middle !important;
     padding: 25px 15px 25px 15px !important;
     h4 {
+      font-size: 4rem;
       font-weight: bold;
+    }
+    p {
+      font-size: 1.8rem;
     }
   }
 }
