added better webm video file HD

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -3,9 +3,8 @@
   <div class="video-container">
     <video autoplay loop muted poster="../img/woman-park-still.png" height="450" id="background">
       <!-- Different source file types here -->
-      <source src="../img/wifidemand-Clip1-lg.webm" type="video/webm">
+      <source src="../img/wifidemand-ClipHD3.webm" type="video/webm">
       <source src="../img/wifidemand-Clip1-lg.mp4" type="video/mp4">
-      <source src="" type="video/ogv">
       Video not Suported
     </video>
   </div>
