cleanup img folder, added cropped mountain pic

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -36,7 +36,7 @@
 <div class="container module-container va-container">
   <div class="row">
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 module module-img">
-      <img class="img-responsive" src="../img/moutain-wifi-03.jpg">
+      <img class="img-responsive" src="../img/wifidemand-mountain-crop.png">
     </div>
     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 module module-text va-middle">
       <h4>Mission</h4>
