deleted img files for the 4th time and changed home.html lowercase src webm

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -3,7 +3,7 @@
   <div class="video-container">
     <video autoplay loop muted poster="../img/woman-park-still.png" height="450" id="background">
       <!-- Different source file types here -->
-      <source src="../img/wifidemand-ClipHD3.webm" type="video/webm">
+      <source src="../img/wifidemand-clipHD3.webm" type="video/webm">
       <source src="../img/wifidemand-Clip1-lg.mp4" type="video/mp4">
       Video not Suported
     </video>
