--- a/public/views/index.html
+++ b/public/views/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta property="og:image" content="https://afternoon-castle-45268.herokuapp.com/img/wifi-symbol.jpg">
     <meta property="og:type" content="Form"
     <meta property="og:title" content="Finally Cooperative Wifi">
