fixed border-top on admin index location table

--- a/public/views/admin.html
+++ b/public/views/admin.html
@@ -38,6 +38,7 @@
         <div class="th-cell">Name</div>
         <div class="th-cell"></div>
         <div class="th-cell"></div>
+        <div class="th-cell"></div>
       </div>
       <div class="t-row" ng-repeat="location in locations track by $index">
         <!-- name  -->
